--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fley's Video Player</title>
 </head>
-<body>
+
+<body style="margin: 0;">
     <noscript>Enable JavaScript to run this app!</noscript>
     <div id="root"></div>
 </body>
+
 </html>
